Removed uses of ImmutableList